I've done some work on the details page. I will add the rest of the vehicle features as tables under the main features and the pictures. Still have to decide about the location of the inquiry form.

--- a/FamilyAuto/Views/Home/Index.cshtml
+++ b/FamilyAuto/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
     <div class="col-md-4">
         <h2>Services</h2>
         <p>Have you checked your oil lately? When's the last time you had the axis alligned? Enter right here and we'll be happy to help.</p>
-        <p>@Html.ActionLink("Services", "Index", new { Controller = "Services" }, new { @class = "btn btn-default" })</p>
+        <p>@Html.ActionLink("Services", "Services", new { Controller = "Home" }, new { @class = "btn btn-default" })</p>
     </div>
     <div class="col-md-4">
         <h2>Contact</h2>
