--- a/FamilyAuto/Views/User/Create.cshtml
+++ b/FamilyAuto/Views/User/Create.cshtml
@@ -55,13 +55,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.UserId, "UserId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("UserId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -78,3 +78,5 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+@Html.HiddenFor(model => model.UserId)
