Implemented an option that allows the user to mark a vehicle as sold which updates the vehicle table and creates a new entry in SoldVehicles table including who it was sold to.

--- a/FamilyAuto/Views/IMS/Index.cshtml
+++ b/FamilyAuto/Views/IMS/Index.cshtml
@@ -18,6 +18,7 @@
     </div>
     <div class=col-md-4>
         <h4>Vehicle overview</h4>
+        @Html.ActionLink("Manage Vehicle Sales", "Create", new { Controller = "SoldVehicles" }, new { @class = "btn btn-primary" })
         <a class="btn btn-default" href="#">ENTER</a>
     </div>
 </div>
