Most of the partial classes are done which fixes the visual representation of the attributes and the views are a lot more readable.

--- a/FamilyAuto/Views/Vehicle/Index.cshtml
+++ b/FamilyAuto/Views/Vehicle/Index.cshtml
@@ -5,13 +5,16 @@
     ViewBag.Title = "Manage vehicle database";
 }
 
-<h2>Index</h2>
+<h2>Vehicle Listing</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+<table class="table table-striped table-hover">
     <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Id)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Make)
         </th>
@@ -28,19 +31,10 @@
             @Html.DisplayNameFor(model => model.Type)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.DateUploaded)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.VehicleEngine.FuelType)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.VehicleFeature.ExteriorColor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.VehicleHistory.Purpose)
+            @Html.DisplayNameFor(model => model.Sold)
         </th>
         <th></th>
     </tr>
@@ -48,6 +42,9 @@
     @foreach (var item in Model)
     {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Make)
             </td>
@@ -64,19 +61,10 @@
                 @Html.DisplayFor(modelItem => item.Type)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.DateUploaded)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.VehicleEngine.FuelType)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.VehicleFeature.ExteriorColor)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.VehicleHistory.Purpose)
+                @Html.DisplayFor(modelItem => item.Sold)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
