--- a/FamilyAuto/Views/SoldVehicles/Create.cshtml
+++ b/FamilyAuto/Views/SoldVehicles/Create.cshtml
@@ -22,6 +22,13 @@
             </div>
         </div>
 
+        @*<div class="form-group">
+            @Html.LabelFor(model => model.VehicleIdName, "VehicleIdName", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("VehicleIdName", null, htmlAttributes: new { @class = "form-control" })
+            </div>
+        </div>*@
+
         <div class="form-group">
             @Html.LabelFor(model => model.CustomerId, "CustomerId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
