--- a/FamilyAuto/Views/SoldVehicles/Index.cshtml
+++ b/FamilyAuto/Views/SoldVehicles/Index.cshtml
@@ -26,6 +26,12 @@
         <th>
             @Html.DisplayNameFor(model => model.Vehicle.Make)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.VehicleIdName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CustomerIdName)
+        </th>
         <th></th>
     </tr>
 
@@ -45,6 +51,12 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Vehicle.Make)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.VehicleIdName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CustomerIdName)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
