--- a/FamilyAuto/Views/Vehicle/Edit.cshtml
+++ b/FamilyAuto/Views/Vehicle/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edit Attributes for Vehicle Number @Html.DisplayFor(model => model.Id)</h2>
 
 
 @using (Html.BeginForm())
