I've done some minor work on the IMS. Commiting before import of a new supplier table.

--- a/FamilyAuto/Views/IMS/Index.cshtml
+++ b/FamilyAuto/Views/IMS/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="row">
     <div class=col-md-4>
         <h4>Maintain Customers and Suppliers</h4>
-        <a class="btn btn-default" href="#">Customers</a>
+        @Html.ActionLink("Manage Customers", "Index", new { Controller = "User" }, new { @class = "btn btn-primary" })
         <a class="btn btn-default" href="#">Suppliers</a>
     </div>
     <div class=col-md-4>
