--- a/FamilyAuto/Views/SoldVehicles/Create.cshtml
+++ b/FamilyAuto/Views/SoldVehicles/Create.cshtml
@@ -70,6 +70,11 @@
 }
 
 <div>
+    <p>Note: If the customer is not in the database follow @Html.ActionLink("this link", "Create", new { Controller = "User" })
+    to create the customer record.</p>
+    </div>
+
+<div>
     @Html.ActionLink("Back to List", "Index")
 </div>
 
