--- a/FamilyAuto/Views/Home/Index.cshtml
+++ b/FamilyAuto/Views/Home/Index.cshtml
@@ -29,47 +29,12 @@
     </div>
 </div>
 
-@*<div class="row">
-    <h2>NEWS</h2>
-    <div class="col-md-4">
-        <p>@DateTime.Today.ToShortDateString()</p>
-        @foreach (var n in Model)
-        {
-            <p>@Html.DisplayFor(item => n.ArticleDescription)</p>
-        }
-        <p>
-            As reported by Automotive News, the lawsuit was filed earlier this month in Michigan by a former employee, Daniel Donovan, who was fired in early December.
-            The suit alleges that VW deleted data for three days in September, after the company was notified that vehicles equipped with its 2.0-liter TDI engines
-            violated U.S. emissions standards. It also claims the company’s IT department also failed to preserve backup disks. Donovan, who was responsible
-            for information management and product liability cases, says in his lawsuit that he reported the deletions to his supervisor.
-        </p>
-    </div>
-    <div class="col-md-4">
-        <p>@DateTime.Today.ToShortDateString()</p>
-        <p>
-            As reported by Automotive News, the lawsuit was filed earlier this month in Michigan by a former employee, Daniel Donovan, who was fired in early December.
-            The suit alleges that VW deleted data for three days in September, after the company was notified that vehicles equipped with its 2.0-liter TDI engines
-            violated U.S. emissions standards. It also claims the company’s IT department also failed to preserve backup disks. Donovan, who was responsible
-            for information management and product liability cases, says in his lawsuit that he reported the deletions to his supervisor.
-        </p>
-    </div>
-    <div class="col-md-4">
-        <p>@DateTime.Today.ToShortDateString()</p>
-        <p>
-            As reported by Automotive News, the lawsuit was filed earlier this month in Michigan by a former employee, Daniel Donovan, who was fired in early December.
-            The suit alleges that VW deleted data for three days in September, after the company was notified that vehicles equipped with its 2.0-liter TDI engines
-            violated U.S. emissions standards. It also claims the company’s IT department also failed to preserve backup disks. Donovan, who was responsible
-            for information management and product liability cases, says in his lawsuit that he reported the deletions to his supervisor.
-        </p>
-    </div>
-</div>*@
-
 <div class="row">
     <h2>@Html.ActionLink("NEWS", "News", new { Controller = "Home" })</h2>
     @foreach (var n in Model)
     {
         <div class="col-md-4">
-            <p>@Html.DisplayFor(item => n.DateUploaded)</p>
+            <p>Published on: <b>@Html.DisplayFor(item => n.DateUploaded)</b></p>
             <h4>@Html.DisplayFor(item => n.ArticleTitle)</h4>
             <p>@Html.DisplayFor(item => n.ArticleDescription)</p>
         </div>
