--- a/FamilyAuto/Views/IMS/Index.cshtml
+++ b/FamilyAuto/Views/IMS/Index.cshtml
@@ -10,63 +10,19 @@
     <div class=col-md-4>
         <h4>Maintain Customers and Suppliers</h4>
         @Html.ActionLink("Manage Customers", "Index", new { Controller = "User" }, new { @class = "btn btn-primary" })
-        <a class="btn btn-default" href="#">Suppliers</a>
+        @Html.ActionLink("Manage Suppliers", "Index", new { Controller = "Supplier" }, new { @class = "btn btn-primary" })
     </div>
     <div class=col-md-4>
-        <h4>Services overview</h4>
-        <a class="btn btn-default" href="#">ENTER</a>
+        <h4>Manage News and Services</h4>
+        @Html.ActionLink("Manage Articles", "Index", new { Controller = "Article" }, new { @class = "btn btn-primary" })
     </div>
     <div class=col-md-4>
         <h4>Vehicle overview</h4>
         @Html.ActionLink("Manage Vehicle Sales", "Create", new { Controller = "SoldVehicles" }, new { @class = "btn btn-primary" })
-        <a class="btn btn-default" href="#">ENTER</a>
     </div>
 </div>
 
 <br /><br /><br /><br />
-
-<div class="row">
-    <h3>Customers</h3>
-    <div class="col-md-3 form-group">
-        <h4>Add new customer</h4>
-        <label>First Name:</label>
-        <input class="form-control" type="text" />
-        <label>Last Name:</label>
-        <input class="form-control" type="text" />
-        <label>Address:</label>
-        <input class="form-control" type="text" />
-        <label>City:</label>
-        <input class="form-control" type="text" />
-        <label>Telephone Number:</label>
-        <input class="form-control" type="text" />
-        <label>Email:</label>
-        <input class="form-control" type="text" />
-        <br />
-        <a class="btn btn-default" href="#">Create</a>
-    </div>
-
-    <div class="col-md-2"></div>
-
-    <h3>Suppliers</h3>
-    <div class="col-md-3 form-group">
-        <h4>Add new supplier</h4>
-        <label>Company Name:</label>
-        <input class="form-control" type="text" />
-        <label>CRN:</label>
-        <input class="form-control" type="text" />
-        <label>Address:</label>
-        <input class="form-control" type="text" />
-        <label>City:</label>
-        <input class="form-control" type="text" />
-        <label>Telephone Number:</label>
-        <input class="form-control" type="text" />
-        <label>Email:</label>
-        <input class="form-control" type="text" />
-        <br />
-        <a class="btn btn-default" href="#">Create</a>
-    </div>
-</div>
-
 
 <div class="row">
     <h3>Customers</h3>
