--- a/FamilyAuto/Views/Account/RoleCreate.cshtml
+++ b/FamilyAuto/Views/Account/RoleCreate.cshtml
@@ -2,10 +2,10 @@
     ViewBag.Title = "Create Role";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="spacerBody">
+<div class="container">
     <p>&nbsp;</p>
-    @Html.ActionLink("Roles", "RoleIndex") | @Html.ActionLink("Add Role to User", "RoleAddToUser")
-    <h2>Role Create</h2>
+    @Html.ActionLink("Roles", "RoleIndex", new { Controller = "Account" }, new { @class = "btn btn-default" }) | @Html.ActionLink("Add Role to User", "RoleAddToUser", new { Controller = "Account" }, new { @class = "btn btn-default" })
+    <h2>Create New Role</h2>
 
     @using (Html.BeginForm())
     {
@@ -18,6 +18,6 @@
         <p>
             @Html.TextBox("RoleName")
         </p>
-        <input type="submit" value="Save" />
+        <input type="submit" value="Save" class="btn btn-primary"/>
     }
 </div>
