--- a/FamilyAuto/Views/IMS/Index.cshtml
+++ b/FamilyAuto/Views/IMS/Index.cshtml
@@ -21,6 +21,18 @@
         @Html.ActionLink("Manage Vehicle Sales", "Create", new { Controller = "SoldVehicles" }, new { @class = "btn btn-primary" })
     </div>
 </div>
+<br />
+<br />
+<hr />
+@if (User.IsInRole("Admin"))
+{
+<div class="row">
+    <div class="col-lg-4">
+        @Html.ActionLink("Manage Roles", "RoleIndex", new { Controller = "Account" }, new { @class = "btn btn-primary" })
+    </div>
+</div>
+}     
+<hr />
 
 <br /><br /><br /><br />
 
