--- a/FamilyAuto/Views/Vehicle/Showroom.cshtml
+++ b/FamilyAuto/Views/Vehicle/Showroom.cshtml
@@ -79,9 +79,19 @@
         </label>
     </div>
     
-    <h5>Make</h5>
+    
     <div class="dropdown">
-        <label>
+        @using (Html.BeginForm("Showroom", "Vehicle", FormMethod.Get))
+        {
+            <h5>Make</h5>
+            @Html.DropDownList("make", new SelectList(ViewBag.Make), new { @onchange = "FillModel()" })
+            <h5>Model</h5>
+            @*@Html.DropDownList("model", new SelectList(ViewBag.Model))*@
+            @Html.DropDownList("model", new SelectList(Enumerable.Empty<SelectListItem>(), "Id", "Model"), "Select Model")
+            <br />
+            <input type="submit" value="Filter" class="btn-sm btn-default" />
+        }
+        @*<label>
             <select>
                 <option value="BMW">BMW</option>
                 <option value="Nissan">Nissan</option>
@@ -89,10 +99,10 @@
                 <option value="Volvo">Volvo</option>
                 <option value="Volkswagen">Volkswagen</option>
             </select>
-        </label>
+        </label>*@
     </div>
 
-    <h5>Model</h5>
+    @*<h5>Model</h5>
     <div class="dropdown">
             <select>
                 <option value="Z1">Z1</option>
@@ -101,7 +111,7 @@
                 <option value="S60">S60</option>
                 <option value="Polo">Polo</option>
             </select>
-    </div>
+    </div>*@
 
     <h5>Mileage (up to)</h5>
     <div class="dropdown">
@@ -119,71 +129,45 @@
         <input type="number" /> To
     </div>
 
-    @*<h4>Location</h4>
-    <div class="radio">
-        <label>
-            <input type="radio" id="chkP1" name="location" value="Praha 1">Praha 1
-        </label>
-        <br />
-        <label>
-            <input type="radio" id="chkP2" name="location" value="Praha 2">Praha 2
-        </label>
-        <br />
-        <label>
-            <input type="radio" id="chkP3" name="location" value="Praha 3">Praha 3
-        </label>
-        <br />
-        <label>
-            <input type="radio" id="chkP4" name="location" value="Praha 4">Praha 4
-        </label>
-        <br />
-        <label>
-            <input type="radio" id="chkP5" name="location" value="Praha 5">Praha 5
-        </label>
-        <br />
-        <label>
-            <input type="radio" id="chkP6" name="location" value="Praha 6">Praha 6
-        </label>
-        <br />
-        <label>
-            <input type="radio" id="chkP7" name="location" value="Praha 7">Praha 7
-        </label>
-        <br />
-        <label>
-            <input type="radio" id="chkP8" name="location" value="Praha 8">Praha 8
-        </label>
-        <br />
-        <label>
-            <input type="radio" id="chkP9" name="location" value="Praha 9">Praha 9
-        </label>
-        <br />
-        <label>
-            <input type="radio" id="chkP10" name="location" value="Praha 10">Praha 10
-        </label>
-        <br />
-    </div>
-    <h4>Cuisine</h4>
-    <div class="radio" id="cuisineFilter">
-        <label>
-            <input type="radio" id="chkMacedonian" name="cuisineType" value="Macedonian">Macedonian
-        </label>
-        <br />
-        <label>
-            <input type="radio" id="chkBalkan" name="cuisineType" value="Balkan">Balkan
-        </label>
-        <br />
-        <label>
-            <input type="radio" id="chkInternational" name="cuisineType" value="International">International
-        </label>
-        <br />
-        <asp:Button ID="btnSourceTest" css="btnSourceTest" Text="Click me" OnClick="btnSourceTest_Click" Style="display: none" />
-        <%--<asp:Label class="tester" style="display:none" Id="LabelTester" runat="server" Text="SELECT TOP 2 p.PictureURL AS Thumbnail, r.NameOfRestaurant, r.Address, r.TypeOfRestaurant, r.[Description], r.DateUploaded, r.Score FROM (SELECT RestaurantID, MAX(PictureID) AS pID From PicturesRestaurants Group by restaurantID) AS t1 JOIN Pictures p ON p.PictureID = t1.pID JOIN vRestaurantDetails r ON r.RestaurantID = t1.RestaurantID" ViewStateMode="Enabled"></asp:Label>--%>
-        <%--<asp:Label class="tester" style="display:none" Id="LabelTester" runat="server" Text="Luka Lu" ViewStateMode="Enabled"></asp:Label>--%>
-        <asp:TextBox class="tester" ID="TextTester" Text="" Style="display: none"></asp:TextBox>
-    </div>
-    <div class="btn-group-vertical btn-block sort-buttons" role="group" aria-label="...">
-        <asp:Button class="btn btn-default" ID="btnSortRestaurants" Text="Lowest Rated" value="asc" OnClick="SortRestaurantOrder" />
-        <asp:Button class="btn btn-primary" ID="btnSortRestaurantsComment" Text="Most Commented" value="desc" OnClick="SortRestaurantByComment" />
-    </div>*@
-</div>
+ </div>
 <br style="clear: left;" />
+
+@section Scripts {
+    @*<script>
+        function FillModel() {
+            var makeId = $('#make').val();
+            $.ajax({
+                url: '/Vehicle/FillModel',
+                type: "GET",
+                dataType: "JSON",
+                data: { Make: makeId },
+                success: function (models) {
+                    $("#model").html("");
+                    $.each(models, function (i, model) {
+                        $("#model").append(
+                            $('<option></option>').val(model.modelId).html(model.Model));
+                    });
+                }
+            });
+        }
+    </script>*@
+
+<script>
+  function FillModel() {
+    var make = $('#make').val();
+    $.ajax({
+        url: '/Vehicle/FillModel',
+        type: "GET",
+        dataType: "JSON",
+        data: { make: make},
+        success: function (models) {
+            $("#model").html(""); // clear before appending new list
+            $.each(models, function (i, model) {
+                $("#model").append(
+                    $('<option></option>').val(model.Model).html(model.Model));
+            });
+        }
+    });
+  }
+</script>
+    }
