--- a/FamilyAuto/Views/Shared/_Layout.cshtml
+++ b/FamilyAuto/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { Controller = "Home" })</li>
+                    <li>@Html.ActionLink("Home", "Index", new { Controller = "Home" })</li>
                     <li>@Html.ActionLink("Showroom", "Showroom", new { Controller = "Vehicle" })</li>
                     <li>@Html.ActionLink("Services", "Services", new { Controller = "Home" })</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
